#cmake version
cmake_minimum_required(VERSION 2.6)

#add subdirectory
ADD_SUBDIRECTORY(./A)
ADD_SUBDIRECTORY(./B)
ADD_SUBDIRECTORY(./C)
ADD_SUBDIRECTORY(./D)
ADD_SUBDIRECTORY(./E)
ADD_SUBDIRECTORY(./F)
ADD_SUBDIRECTORY(./G)
ADD_SUBDIRECTORY(./H)
ADD_SUBDIRECTORY(./I)
ADD_SUBDIRECTORY(./J)
ADD_SUBDIRECTORY(./K)
ADD_SUBDIRECTORY(./L)
ADD_SUBDIRECTORY(./M)
ADD_SUBDIRECTORY(./N)


